--- a/Examples/PhysOrg_test.ipynb
+++ b/Examples/PhysOrg_test.ipynb
@@ -55,11 +55,11 @@
     "\n",
     "from ChemSelML.bin.ChemSelectivityDataset import ReactionDataset, SelectivityDataset\n",
     "\n",
-    "ArR_dataset = ReactionDataset(root='/PyScripts/PyTorch.dir/Radical/DataSet', mode='dev')\n",
+    "ArR_dataset = ReactionDataset(root='../DataSet', mode='dev')\n",
     "print(ArR_dataset,'\\n')\n",
     "print(ArR_dataset.data,'\\n')\n",
     "\n",
-    "ArR_DDG_dataset = SelectivityDataset(root='/PyScripts/PyTorch.dir/Radical/DataSet', mode='dev')\n",
+    "ArR_DDG_dataset = SelectivityDataset(root='../DataSet', mode='dev')\n",
     "print(ArR_DDG_dataset,'\\n')\n",
     "print(ArR_DDG_dataset.data,'\\n')"
    ]
